fpac (3.27.16)
	* Bug in expanding variables in conf files with make corrected

 -- Lee Woldanski <ve7fet@tparc.org>  Mon, 24 Jan 2011 12:00:00 -0800

fpac (3.27.15)
	* Rolling Bernards changes into an incremental release
	* Updated sources to use GNU autotools (makes portability using ./configure script)
	* Removed un-used source files not linked to any program
	* Removed #define OLD_AX25 support, builds against current libax25-0.0.12rc2
	* Changed functions rose2asc and ax2asc in wp/wpconvert.c to rose_ntoa and ax25_ntoa, respectively
	* Note wpconvert is not installed by default
	* .conf files are now processed by make to update necessary paths
	* `make install' will install all binaries, fpac/help files, docs, as well as sbin/fpac.sh, sbin/versions, 
	  var/ax25/fpac/loggedin, var/ax25/flex/gateways, and var/ax25/flex/destinations
	* `make installconf' will install all default configuration files in /etc/ax25
	* Changed error message in fpacnode when <3 fpac nodes or routes have been defined
	* Changed usage message for white pages to specify correct wp database file
	* Checked includes with splint (www.splint.org) in sources and commented out unnecessary headers
	* Verified ./configure header/library checks

 -- Lee Woldanski <ve7fet@tparc.org>  Fri, 7 Jan 2011 23:00:00 -0800 

fpac (3.27.14-pre32)
	* FPAC White Page server still in debuging phase for compatibility between 32 and 64 bits systems.

 -- Bernard Pidoux <f6bvp@free.fr>

fpac (3.27.14-pre31) 
	* Fpacwpd server accepts less than WP_OBSOLETE days old DELETED records. This parameter was 180 and is now 14 days.
	* More bugs found in White Page server due to added compatibility with faster timers and 64 bit CPUs.

 -- Bernard Pidoux <f6bvp@free.fr>

fpac (3.27.14-pre30)
	* FPAC daemon programs termination mode have been adapted to Linux 2.6.
	  (fpad, fpacwpd, fpacstat, fpacroute, aprslist, and mkissattach [obsolete]) 